<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="220dp"
    android:layout_height="150dp">

    <EditText
        android:id="@+id/Iam_domain_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/iam1"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/blue_biaozhun"
        android:textCursorDrawable="@drawable/cursor_customize"/>

    <EditText
        android:id="@+id/Iam_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/iam2"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/blue_biaozhun"
        android:textCursorDrawable="@drawable/cursor_customize" />

    <EditText
        android:id="@+id/Iam_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/iam3"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/blue_biaozhun"
        android:textCursorDrawable="@drawable/cursor_customize" />

</TableLayout>